--- a/index.html
+++ b/index.html
@@ -43,77 +43,86 @@
                 </div>
             </section>
             <article class="content">
-                <div class="content__text">Горящие туры</div>
-                <img src="#" alt="content icon" class="content__image">
-                <ul class="content__list">
-                    <li class="content__item">
-                        <img src="#" alt="content image" class="content__image">
-                        <h2 class="content__title">Тайланд</h2>
-                        <ul class="content__item__feature">
-                            <li class="content__item__offer">
-                                <img src="#" alt="offer image" class="offer__image">
-                                <div class="content__item__text">7- 12 ночей</div>
-                            </li>
-                            <li class="content__item__offer">
-                                <img src="#" alt="offer image" class="offer__image">
-                                <div class="content__item__text">Завтраки</div>
-                            </li>
-                        </ul>
-                        <div class="content__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.</div>
-                        <div class="content__button">
-                            <button class="button">Смотреть</button>
-                        </div>
-                    </li>
-                    <li class="content__item">
-                        <img src="#" alt="content image" class="content__image">
-                        <h2 class="content__title">Бали</h2>
-                        <ul class="content__item__feature">
-                            <li class="content__item__offer">
-                                <img src="#" alt="offer image" class="offer__image">
-                                <div class="content__item__text">7- 12 ночей</div>
-                            </li>
-                            <li class="content__item__offer">
-                                <img src="#" alt="offer image" class="offer__image">
-                                <div class="content__item__text">Завтраки</div>
-                            </li>
-                        </ul>
-                        <div class="content__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.</div>
-                        <div class="content__button">
-                            <button class="button">Смотреть</button>
-                        </div>
-                    </li>
-                    <li class="content__item">
-                        <img src="#" alt="content image" class="content__image">
-                        <h2 class="content__title">Индонезия</h2>
-                        <ul class="content__item__feature">
-                            <li class="content__item__offer">
-                                <img src="#" alt="offer image" class="offer__image">
-                                <div class="content__item__text">7- 12 ночей</div>
-                            </li>
-                            <li class="content__item__offer">
-                                <img src="#" alt="offer image" class="offer__image">
-                                <div class="content__item__text">Завтраки</div>
-                            </li>
-                        </ul>
-                        <div class="content__text">Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового участия.</div>
-                        <div class="content__button">
-                            <button class="button">Смотреть</button>
-                        </div>
-                    </li>
-                </ul>
-
-            </article>          
+                <div class="contnet__title">
+                    <div class="content__text">Горящие туры</div>
+                    <img src="#" alt="content icon" class="content__image">
+                    <ul class="content__list">
+                        <li class="content__item">
+                            <img src="#" alt="content image" class="content__image">
+                            <h2 class="content__title">Тайланд</h2>
+                            <ul class="content__item-feature">
+                                <li class="content__item-offer">
+                                    <img src="#" alt="content image" class="content__image">
+                                    <div class="content__item-text">7- 12 ночей</div>
+                                </li>
+                                <li class="content__item-offer">
+                                    <img src="#" alt="content image" class="content__image">
+                                    <div class="content__item-text">Завтраки</div>
+                                </li>
+                            </ul>
+                            <div class="content__text">Равным образом постоянное обеспечение нашей деятельности
+                                позволяет
+                                оценить значение систем массового участия.</div>
+                            <div class="content__button">
+                                <button class="button">Смотреть</button>
+                            </div>
+                        </li>
+                        <li class="content__item">
+                            <img src="#" alt="content image" class="content__image">
+                            <h2 class="content__title">Бали</h2>
+                            <ul class="content__item-feature">
+                                <li class="content__item-offer">
+                                    <img src="#" alt="content image" class="content__image">
+                                    <div class="content__item-text">7- 12 ночей</div>
+                                </li>
+                                <li class="content__item-offer">
+                                    <img src="#" alt="content image" class="content__image">
+                                    <div class="content__item-text">Завтраки</div>
+                                </li>
+                            </ul>
+                            <div class="content__text">Равным образом постоянное обеспечение нашей деятельности
+                                позволяет
+                                оценить значение систем массового участия.</div>
+                            <div class="content__button">
+                                <button class="button">Смотреть</button>
+                            </div>
+                        </li>
+                        <li class="content__item">
+                            <img src="#" alt="content image" class="content__image">
+                            <h2 class="content__title">Индонезия</h2>
+                            <ul class="content__item-feature">
+                                <li class="content__item-offer">
+                                    <img src="#" alt="content image" class="content__image">
+                                    <div class="content__item-text">7- 12 ночей</div>
+                                </li>
+                                <li class="content__item-offer">
+                                    <img src="#" alt="content image" class="content__image">
+                                    <div class="content__item-text">Завтраки</div>
+                                </li>
+                            </ul>
+                            <div class="content__text">Равным образом постоянное обеспечение нашей деятельности
+                                позволяет
+                                оценить значение систем массового участия.</div>
+                            <div class="content__button">
+                                <button class="button">Смотреть</button>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </article>
             <div class="news">
                 <h2 class="news__title">Новости и акции</h2>
                 <ul class="news__list">
                     <li class="news__item">
                         <img src="" alt="news image" class="news__image">
-                        <div class="news__date">
-                            <span class="news__date-month">Декабрь</span>
-                            <span class="news__date-year">2019</span>
+                        <div class="news__subtitle">
+                            <div class="news__date">
+                                <span class="news__date-month">Декабрь</span>
+                                <span class="news__date-year">2019</span>
+                            </div>
+                            <div class="news__subtitle">Дешевые путевки на Новый Год!</div>
+                            <div class="news__info">Проведи Новый Год в Тайланде</div>
                         </div>
-                        <div class="news__subtitle">Дешевые путевки на Новый Год!</div>
-                        <div class="news__info">Проведи Новый Год в Тайланде</div>
                     </li>
                     <li class="news__item">
                         <img src="" alt="news image" class="news__image">
@@ -122,39 +131,40 @@
                             <span class="news__date-year">2019</span>
                         </div>
                         <div class="news__subtitle">Акция для серфенгистов!</div>
-                        <div class="news__info">В сезон больших волн скидка на путевку в Тайланд на остров серфенгистов. Удачного пути!</div>
+                        <div class="news__info">В сезон больших волн скидка на путевку в Тайланд на остров серфенгистов.
+                            Удачного пути!</div>
                     </li>
                 </ul>
                 <div class="paginator">
                     <div class="paginator__display">
-                        Страница 
+                        Страница
                         <span class="paginator__display-current">1</span>
                         из
                         <span class="paginator__display-current">7</span>
                     </div>
-                <ul class="paginator__list">
-                    <li class="paginator__item">
-                        <a href="#" class="paginator__link">1</a>
-                    </li>
-                    <li class="paginator__item">
-                        <a href="#" class="paginator__link">2</a>
-                    </li>
-                    <li class="paginator__item">
-                        <a href="#" class="paginator__link">3</a>
-                    </li>
-                    <li class="paginator__item">
-                        <a href="#" class="paginator__link">4</a>
-                    </li>
-                    <li class="paginator__item">
-                        <a href="#" class="paginator__link">5</a>
-                    </li>
-                    <li class="paginator__item">
-                        <a href="#" class="paginator__link">6</a>
-                    </li>
-                    <li class="paginator__item">
-                        <a href="#" class="paginator__link">7</a>
-                    </li>
-                </ul>
+                    <ul class="paginator__list">
+                        <li class="paginator__item">
+                            <a href="#" class="paginator__link">1</a>
+                        </li>
+                        <li class="paginator__item">
+                            <a href="#" class="paginator__link">2</a>
+                        </li>
+                        <li class="paginator__item">
+                            <a href="#" class="paginator__link">3</a>
+                        </li>
+                        <li class="paginator__item">
+                            <a href="#" class="paginator__link">4</a>
+                        </li>
+                        <li class="paginator__item">
+                            <a href="#" class="paginator__link">5</a>
+                        </li>
+                        <li class="paginator__item">
+                            <a href="#" class="paginator__link">6</a>
+                        </li>
+                        <li class="paginator__item">
+                            <a href="#" class="paginator__link">7</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="about">
@@ -162,7 +172,9 @@
                 <div class="about__content">
                     <h2 class="about__title">О нас</h2>
                     <div class="about__information">
-                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. 
+                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
+                        менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных
+                        выступлений в домашних условиях.
                     </div>
                     <div class="about__button">
                         <button class="button">Подробнее</button>
@@ -220,4 +232,5 @@
         </footer>
     </div>
 </body>
+
 </html>
