--- a/index.html
+++ b/index.html
@@ -43,79 +43,80 @@
                 </div>
             </section>
             <article class="content">
-                <div class="contnet__title">
+                <div class="content__title">
                     <div class="content__text">Горящие туры</div>
                     <img src="#" alt="content icon" class="content__image">
-                    <ul class="content__list">
-                        <li class="content__item">
-                            <img src="#" alt="content image" class="content__image">
-                            <h2 class="content__title">Тайланд</h2>
-                            <ul class="content__item-feature">
-                                <li class="content__item-offer">
-                                    <img src="#" alt="content image" class="content__image">
-                                    <div class="content__item-text">7- 12 ночей</div>
-                                </li>
-                                <li class="content__item-offer">
-                                    <img src="#" alt="content image" class="content__image">
-                                    <div class="content__item-text">Завтраки</div>
-                                </li>
-                            </ul>
-                            <div class="content__text">Равным образом постоянное обеспечение нашей деятельности
-                                позволяет
-                                оценить значение систем массового участия.</div>
-                            <div class="content__button">
-                                <button class="button">Смотреть</button>
-                            </div>
-                        </li>
-                        <li class="content__item">
-                            <img src="#" alt="content image" class="content__image">
-                            <h2 class="content__title">Бали</h2>
-                            <ul class="content__item-feature">
-                                <li class="content__item-offer">
-                                    <img src="#" alt="content image" class="content__image">
-                                    <div class="content__item-text">7- 12 ночей</div>
-                                </li>
-                                <li class="content__item-offer">
-                                    <img src="#" alt="content image" class="content__image">
-                                    <div class="content__item-text">Завтраки</div>
-                                </li>
-                            </ul>
-                            <div class="content__text">Равным образом постоянное обеспечение нашей деятельности
-                                позволяет
-                                оценить значение систем массового участия.</div>
-                            <div class="content__button">
-                                <button class="button">Смотреть</button>
-                            </div>
-                        </li>
-                        <li class="content__item">
-                            <img src="#" alt="content image" class="content__image">
-                            <h2 class="content__title">Индонезия</h2>
-                            <ul class="content__item-feature">
-                                <li class="content__item-offer">
-                                    <img src="#" alt="content image" class="content__image">
-                                    <div class="content__item-text">7- 12 ночей</div>
-                                </li>
-                                <li class="content__item-offer">
-                                    <img src="#" alt="content image" class="content__image">
-                                    <div class="content__item-text">Завтраки</div>
-                                </li>
-                            </ul>
-                            <div class="content__text">Равным образом постоянное обеспечение нашей деятельности
-                                позволяет
-                                оценить значение систем массового участия.</div>
-                            <div class="content__button">
-                                <button class="button">Смотреть</button>
-                            </div>
-                        </li>
-                    </ul>
                 </div>
+                <ul class="content__list">
+                    <li class="content__item">
+                        <img src="#" alt="content image" class="content__image">
+                        <h2 class="content__title">Тайланд</h2>
+                        <ul class="content__item-feature">
+                            <li class="content__item-offer">
+                                <img src="#" alt="content image" class="content__image">
+                                <div class="content__item-text">7- 12 ночей</div>
+                            </li>
+                            <li class="content__item-offer">
+                                <img src="#" alt="content image" class="content__image">
+                                <div class="content__item-text">Завтраки</div>
+                            </li>
+                        </ul>
+                        <div class="content__text">Равным образом постоянное обеспечение нашей деятельности
+                            позволяет
+                            оценить значение систем массового участия.</div>
+                        <div class="content__button">
+                            <button class="button">Смотреть</button>
+                        </div>
+                    </li>
+                    <li class="content__item">
+                        <img src="#" alt="content image" class="content__image">
+                        <h2 class="content__title">Бали</h2>
+                        <ul class="content__item-feature">
+                            <li class="content__item-offer">
+                                <img src="#" alt="content image" class="content__image">
+                                <div class="content__item-text">7- 12 ночей</div>
+                            </li>
+                            <li class="content__item-offer">
+                                <img src="#" alt="content image" class="content__image">
+                                <div class="content__item-text">Завтраки</div>
+                            </li>
+                        </ul>
+                        <div class="content__text">Равным образом постоянное обеспечение нашей деятельности
+                            позволяет
+                            оценить значение систем массового участия.</div>
+                        <div class="content__button">
+                            <button class="button">Смотреть</button>
+                        </div>
+                    </li>
+                    <li class="content__item">
+                        <img src="#" alt="content image" class="content__image">
+                        <h2 class="content__title">Индонезия</h2>
+                        <ul class="content__item-feature">
+                            <li class="content__item-offer">
+                                <img src="#" alt="content image" class="content__image">
+                                <div class="content__item-text">7- 12 ночей</div>
+                            </li>
+                            <li class="content__item-offer">
+                                <img src="#" alt="content image" class="content__image">
+                                <div class="content__item-text">Завтраки</div>
+                            </li>
+                        </ul>
+                        <div class="content__text">Равным образом постоянное обеспечение нашей деятельности
+                            позволяет
+                            оценить значение систем массового участия.</div>
+                        <div class="content__button">
+                            <button class="button">Смотреть</button>
+                        </div>
+                    </li>
+                </ul>
+
             </article>
             <div class="news">
                 <h2 class="news__title">Новости и акции</h2>
                 <ul class="news__list">
                     <li class="news__item">
                         <img src="" alt="news image" class="news__image">
-                        <div class="news__subtitle">
+                        <div class="news__content">
                             <div class="news__date">
                                 <span class="news__date-month">Декабрь</span>
                                 <span class="news__date-year">2019</span>
