--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <header class="header">
                 <div class="logo">
                     <a href="#" class="logo__link">
-                        <img src="img/logoimage.png" alt="logo image" class="logo__img">
+                        <img src="https://github.com/volodmen/project2/blob/img/img/logoimage.png?raw=true" alt="logo image" class="logo__img">
                     </a>
                 </div>
                 <nav class="menu">
@@ -50,18 +50,18 @@
                 <article class="content">
                     <div class="content__section">
                         <div class="content__subtitle">Горящие туры</div>
-                        <img src="img/flame.png" alt="content icon" class="content__subtitle">
+                        <img src="https://github.com/volodmen/project2/blob/img/img/flame.png?raw=true" alt="content icon" class="content__subtitle">
                     </div>
                     <ul class="content__list">
                         <li class="content__item">
-                            <img src="img/river.png" alt="content image" class="content__image">
+                            <img src="https://github.com/volodmen/project2/blob/img/img/river.png?raw=true" alt="content image" class="content__image">
                             <div class="content__padding">
                                 <h2 class="content__title">Тайланд</h2>
                                 <ul class="content__item-feature">
                                     <li class="content__item-offer">
                                         <ul class="content__item-service">
                                             <li class="content__item-calendar">
-                                                <img src="img/calendar.png" alt="content image" class="content__image ">
+                                                <img src="https://github.com/volodmen/project2/blob/img/img/calendar.png?raw=true" alt="content image" class="content__image ">
                                             </li>
                                             <li class="content__item-calendar">
                                                 <div class="content__item-text ">7- 12 ночей</div>
@@ -71,7 +71,7 @@
                                     <li class="content__item-offer">
                                         <ul class="content__item-service">
                                             <li class="content__item-meal">
-                                                <img src="img/meal.png" alt="content image" class="content__image ">
+                                                <img src="https://github.com/volodmen/project2/blob/img/img/meal.png?raw=true" alt="content image" class="content__image ">
                                             </li>
                                             <li class="content__item-meal">
                                                 <div class="content__item-text ">Завтраки</div>
@@ -88,14 +88,14 @@
                             </div>
                         </li>
                         <li class="content__item">
-                            <img src="img/pool.png" alt="content image" class="content__image">
+                            <img src="https://github.com/volodmen/project2/blob/img/img/pool.png?raw=true" alt="content image" class="content__image">
                             <div class="content__padding">
                                 <h2 class="content__title">Бали</h2>
                                 <ul class="content__item-feature">
                                     <li class="content__item-offer">
                                         <ul class="content__item-service">
                                             <li class="content__item-calendar">
-                                                <img src="img/calendar.png" alt="content image" class="content__image ">
+                                                <img src="https://github.com/volodmen/project2/blob/img/img/calendar.png?raw=true" alt="content image" class="content__image ">
                                             </li>
                                             <li class="content__item-calendar">
                                                 <div class="content__item-text ">7- 12 ночей</div>
@@ -105,7 +105,7 @@
                                     <li class="content__item-offer">
                                         <ul class="content__item-service">
                                             <li class="content__item-meal">
-                                                <img src="img/meal.png" alt="content image" class="content__image ">
+                                                <img src="https://github.com/volodmen/project2/blob/img/img/meal.png?raw=true" alt="content image" class="content__image ">
                                             </li>
                                             <li class="content__item-meal">
                                                 <div class="content__item-text ">Завтраки</div>
@@ -122,14 +122,14 @@
                             </div>
                         </li>
                         <li class="content__item">
-                            <img src="img/ocean.png" alt="content image" class="content__image">
+                            <img src="https://github.com/volodmen/project2/blob/img/img/ocean.png?raw=true" alt="content image" class="content__image">
                             <div class="content__padding">
                                 <h2 class="content__title">Индонезия</h2>
                                 <ul class="content__item-feature">
                                     <li class="content__item-offer">
                                         <ul class="content__item-service">
                                             <li class="content__item-calendar">
-                                                <img src="img/calendar.png" alt="content image" class="content__image ">
+                                                <img src="https://github.com/volodmen/project2/blob/img/img/calendar.png?raw=true" alt="content image" class="content__image ">
                                             </li>
                                             <li class="content__item-calendar">
                                                 <div class="content__item-text ">7- 12 ночей</div>
@@ -139,7 +139,7 @@
                                     <li class="content__item-offer">
                                         <ul class="content__item-service">
                                             <li class="content__item-meal">
-                                                <img src="img/meal.png" alt="content image" class="content__image ">
+                                                <img src="https://github.com/volodmen/project2/blob/img/img/meal.png?raw=true" alt="content image" class="content__image ">
                                             </li>
                                             <li class="content__item-meal">
                                                 <div class="content__item-text ">Завтраки</div>
@@ -162,7 +162,7 @@
                     <h2 class="news__title">Новости и акции</h2>
                     <ul class="news__list">
                         <li class="news__item">
-                            <img src="img/plain.png" alt="news image" class="news__image">
+                            <img src="https://github.com/volodmen/project2/blob/img/img/plain.png?raw=true" alt="news image" class="news__image">
                             <div class="news__content">
                                 <div class="news__date">
                                     <span class="news__date-month">Декабрь</span>
@@ -173,7 +173,7 @@
                             </div>
                         </li>
                         <li class="news__item">
-                            <img src="img/Surfer.png" alt="news image" class="news__image">
+                            <img src="https://github.com/volodmen/project2/blob/img/img/Surfer.png?raw=true" alt="news image" class="news__image">
                             <div class="news__content">
                                 <div class="news__date">
                                     <span class="news__date-month">Декабрь</span>
@@ -248,7 +248,7 @@
                     <d class="footer">
                         <div class="logo">
                             <a href="#" class="logo__link">
-                                <img src="img/logoimage.png" alt="logo image" class="logo__img">
+                                <img src="https://github.com/volodmen/project2/blob/img/img/logoimage.png?raw=true" alt="logo image" class="logo__img">
                             </a>
                         </div>
                         <nav class="menu">
