--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -21,20 +21,20 @@
             <div class="container top-line__container">
                 <header class="header header__services">
                     <div class="header__col">
-                        <a href="#" class="logo__link">
+                        <a href="https://volodmen.github.io/project2/main.html" class="logo__link">
                             <img src="https://github.com/volodmen/project2/blob/img/img/logoimage.png?raw=true"
                                 alt="logo image" class="logo__img">
                         </a>
                         <nav class="menu">
                             <ul class="menu__list">
                                 <li class="menu__item">
-                                    <a href="https://volodmen.github.io/project2/index.html" class="menu__link">Главная</a>
+                                    <a href="https://volodmen.github.io/project2/main.html" class="menu__link">Главная</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="#" class="menu__link">Услуги</a>
+                                    <a href="https://volodmen.github.io/project2/services.html" class="menu__link">Услуги</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a href="#" class="menu__link">Отзывы</a>
+                                    <a href="https://volodmen.github.io/project2/reviews.html" class="menu__link">Отзывы</a>
                                 </li>
                             </ul>
                         </nav>
@@ -42,7 +42,14 @@
                     <div class="header__col header__col--align--right">
                         <address class="phones">
                             <a href="tel:+78007003030" class="phones__number">8 800 700 30 30</a>
-                            <div class="phones__graph">График работы</div>
+                            <div class="dropdown">
+                                <a href="#" class="phones__graph">График работы</a>
+                            <div class="dropdown__menu">
+                                <ul class="dropdown__list">
+                                    <li class="dropdown__item dropdown__item-bold">пн-вс: 09:00 - 20:00</li>
+                                    <li class="dropdown__item">Обед: 14:00-14:30</li>
+                                </ul>
+                           </div>
                         </address>
                     </div>
                 </header>
@@ -50,10 +57,10 @@
                 <nav class="breadcrumbs">
                     <ul class="breadcrumbs__list">
                         <li class="breadcrumbs__item">
-                            <a href="https://volodmen.github.io/project2/index.html" class="breadcrumbs__link">Главная</a>
+                            <a href="https://volodmen.github.io/project2/main.html" class="breadcrumbs__link">Главная</a>
                         </li>
                         <li class="breadcrumbs__item breadcrumbs__item-active">
-                            <a href="#" class="breadcrumbs__link">Услуги</a>
+                            <a href="https://volodmen.github.io/project2/services.html" class="breadcrumbs__link">Услуги</a>
                         </li>
                     </ul>
                 </nav>
@@ -62,7 +69,7 @@
 
         </section>
         <main class="page-content">
-            <div class="container">
+            <div class="container container__page">
                 <ul class="services">
                     <li class="services__item">
                         <div class="services__desc">
@@ -193,7 +200,7 @@
             <div class="footer footer-container__section">
                 <div class="footer__col">
                     <div class="logo">
-                        <a href="#" class="logo__link">
+                        <a href="https://volodmen.github.io/project2/main.html" class="logo__link">
                             <img src="https://github.com/volodmen/project2/blob/img/img/logoimage.png?raw=true"
                                 alt="logo image" class="logo__img">
                         </a>
@@ -201,13 +208,13 @@
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__item">
-                                <a href="https://volodmen.github.io/project2/index.html" class="menu__link">Главная</a>
+                                <a href="https://volodmen.github.io/project2/main.html" class="menu__link">Главная</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Услуги</a>
+                                <a href="https://volodmen.github.io/project2/sevices.html" class="menu__link">Услуги</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link">Отзывы</a>
+                                <a href="https://volodmen.github.io/project2/reviews.html" class="menu__link">Отзывы</a>
                             </li>
                         </ul>
                     </nav>
